cv, abstract, references update

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,15 +1,17 @@
-This is where the text of your Abstract will go. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Sed hendrerit consequat tristique.
-Duis venenatis tempus nisi vitae tempor. Maecenas ac efficitur magna.
-Aenean aliquam vel nibh in gravida. Sed risus lectus, egestas sed
-dignissim ac, ultrices sit amet purus. Vestibulum quis purus dapibus,
-iaculis arcu vitae, lacinia sem. Duis consequat enim sit amet ante
-dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+The study of decision making during adolescence has received considerable attention throughout the history of developmental psychology, justifiably, given the marked increases in morbidity and mortality that belie otherwise robust health.
+Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is almost no work that investigates the effect of these motives, per se.
+In particular, motivations toward developing sexual and romantic relationships, as well as finding one's optimal position in peer status hierarchies have both been acknowledged as especially relevant for this period of development.
+Almost all research in this area focuses on self-report, and is heavily weighted toward the domain of status and popularity.
+A major gap in this literature is an understanding of how adolescent-relevant motivations affect basic behavioral processes, and of the consequences of individual differences in motivations.
 
-This is the second paragraph of the abstract. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Sed hendrerit consequat tristique.
-Duis venenatis tempus nisi vitae tempor. Maecenas ac efficitur magna.
-Aenean aliquam vel nibh in gravida. Sed risus lectus, egestas sed
-dignissim ac, ultrices sit amet purus. Vestibulum quis purus dapibus,
-iaculis arcu vitae, lacinia sem. Duis consequat enim sit amet ante
-dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+The current investigation uses reinforcement learning to examine the effects of social motives on stimulus salience. 
+This may allow both indirect, behavioral measurement of motivations, and is itself a potential mechanism by which motivations affect behavior via experience of the environment, and learning.
+Adolescent (N = 104) and college student (N = 230) participants learned four social-motive-relevant, and two baseline face-word associations.
+Learning was characterized using both proportion of optimal responses in the last half of the learning task, and a Rescorla-Wagner-like computational model.
+Results showed greater learning, and higher learning rates, in the social-motive conditions.
+
+In order to explore the validity of behavior on the task as a measure of particular motivations, individual learning differences  between social and baseline conditions were compared with developmental indices, self-report traits, and self-report health-relevant behaviors.
+Older participants were better at the learning task, but social-motive learning enhancement was constant across development.
+Measures of social-motive effects on learning did not correlate with self-reported traits or health-related behaviors.
+The effects of motive-relevant words on learning may be due to factors unrelated to motivation, but research design may also be problematic.
+Self-report trait instruments performed well, but a more comprehensive taxonomy of motivational constructs and measures would be beneficial.
