--- a/ch04_aim2.Rmd
+++ b/ch04_aim2.Rmd
@@ -147,7 +147,7 @@ Special attention will be given to the FSMI Mate-seeking and Status scales, the 
 
 Four parameters from the reinforcement learning model of SPLT behavior, $\epsilon, \rho, \xi, b$, and two proportions of optimal responses during the first and second half of the run, were correlated with all latent variables in the measurement models established in the step above.
 The variables for the SPLT comprise a value for every parameter, for every condition (Hungry/Thirsty, Popular/Unpopular, Dating/Looking), as well as for the contrasts between the two social conditions and the minimally social condition for a total of 30.
-The contrast variables for model parameters are calculated on the model scale, such that $0\le\epsilon,\xi\le1]$ and $0\le\rho$, and analyzed without further transformation (differences in proportions are treated similarly).
+The contrast variables for model parameters are calculated on the model scale, such that $0\le\epsilon,\xi\le1$ and $0\le\rho$, and analyzed without further transformation (differences in proportions are treated similarly).
 The parameters from the baseline condition are transformed as they were during model estimation, such that $\epsilon^\prime=\phi^{-1}(\epsilon)$, $\xi^\prime=\phi^{-1}(\xi)$, $\rho^\prime = ln(\rho)$, where $\phi^{-1}$ is the quantile function for the unit normal density.
 The condition-specific (but not contrast) values for proportion of optimal responses were also transformed using the quantile function.
 
@@ -1096,7 +1096,7 @@ On the other hand, the relations of Sensation Seeking to performance may be expl
 The Prestige correlation is consistent with the view that such a strategy requires individuals to demonstrate competency, and though rather contrived, this task is an opportunity to perform well.
 Dominance-related popularity strategies have been associated with relational aggression and academic disengagement [@debruyn2006;@kiefer2008], which could explain this negative relation to performance, possibly through decreased focus.
 If there is a true relation between task performance and Sensation Seeking, it is much less straightforward -- while some authors have suggested that purported heightened reward sensitivity during adolescence could lead to improved learning [@davidow2016;@mccormick2017], Sensation Seeking in these data correlate more strongly with the noise parameter, $\xi$, than with reward sensitivity, $\rho$.
-Generally, these patterns of correlations with baseline task behavior highlight one of the potential strengths of this method (which would be more easily verified with higher precision), which is that it allows decomposition of behavior into distinct psychological processes that may be difficult to disentangle using other means [@vandenbos2017].
+Generally, these patterns of correlations with baseline task behavior highlight one of the potential strengths of this method (which would be more easily verified with higher precision), which is that it allows decomposition of behavior into distinct psychological processes that may be difficult to disentangle using other means [@bos2017].
 
 Although correlations between SPLT contrast variables and self-report scales are of a similar magnitude to the baseline correlations, they have a much less straightforward interpretation.
 For example, in the combined samples, and college-only samples, higher sensation seeking and impulsivity as measured by UPPS-P subscales are weakly positively correlated with the $\rho$ parameter differences between both the Dating and Popular conditions versus baseline, but much more weakly, still, with overall performance.
