--- a/preamble.tex
+++ b/preamble.tex
@@ -123,7 +123,7 @@
 \author{John C. Flournoy}
 \department{Department of Psychology}
 \narrowdepartment{Department of Psychology}
-\degreetype{Master of Philosophy}
+\degreetype{Doctor of Philosophy}
 \degreemonth{August}
 \degreeyear{2018}
 \chair{Jennifer Pfeifer}
@@ -132,21 +132,23 @@
            Nicole Giuliani & Institutional Representative \\}
 \graddean{Sara Hodges}
 \abstract{
-This is where the text of your Abstract will go. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Sed hendrerit consequat tristique.
-Duis venenatis tempus nisi vitae tempor. Maecenas ac efficitur magna.
-Aenean aliquam vel nibh in gravida. Sed risus lectus, egestas sed
-dignissim ac, ultrices sit amet purus. Vestibulum quis purus dapibus,
-iaculis arcu vitae, lacinia sem. Duis consequat enim sit amet ante
-dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+The study of decision making during adolescence has received considerable attention throughout the history of developmental psychology, justifiably, given the marked increases in morbidity and mortality that belie otherwise robust health.
+Although the dominant theories invoked to help explain decision-making during adolescence acknowledge the existence of motivations that are thought to be central to this developmental period, there is almost no work that investigates the effect of these motives, per se.
+In particular, motivations toward developing sexual and romantic relationships, as well as finding one's optimal position in peer status hierarchies have both been acknowledged as especially relevant for this period of development.
+Almost all research in this area focuses on self-report, and is heavily weighted toward the domain of status and popularity.
+A major gap in this literature is an understanding of how adolescent-relevant motivations affect basic behavioral processes, and of the consequences of individual differences in motivations.
 
-This is the second paragraph of the abstract. Lorem ipsum dolor sit
-amet, consectetur adipiscing elit. Sed hendrerit consequat tristique.
-Duis venenatis tempus nisi vitae tempor. Maecenas ac efficitur magna.
-Aenean aliquam vel nibh in gravida. Sed risus lectus, egestas sed
-dignissim ac, ultrices sit amet purus. Vestibulum quis purus dapibus,
-iaculis arcu vitae, lacinia sem. Duis consequat enim sit amet ante
-dapibus porttitor. Morbi id nisl a est feugiat iaculis.
+The current investigation uses reinforcement learning to examine the effects of social motives on stimulus salience. 
+This may allow both indirect, behavioral measurement of motivations, and is itself a potential mechanism by which motivations affect behavior via experience of the environment, and learning.
+Adolescent (N = 104) and college student (N = 230) participants learned four social-motive-relevant, and two baseline face-word associations.
+Learning was characterized using both proportion of optimal responses in the last half of the learning task, and a Rescorla-Wagner-like computational model.
+Results showed greater learning, and higher learning rates, in the social-motive conditions.
+
+In order to explore the validity of behavior on the task as a measure of particular motivations, individual learning differences  between social and baseline conditions were compared with developmental indices, self-report traits, and self-report health-relevant behaviors.
+Older participants were better at the learning task, but social-motive learning enhancement was constant across development.
+Measures of social-motive effects on learning did not correlate with self-reported traits or health-related behaviors.
+The effects of motive-relevant words on learning may be due to factors unrelated to motivation, but research design may also be problematic.
+Self-report trait instruments performed well, but a more comprehensive taxonomy of motivational constructs and measures would be beneficial.
 
 }
 \school{University of Oregon, Eugene, OR, USA}
@@ -156,9 +158,9 @@ dapibus porttitor. Morbi id nisl a est feugiat iaculis.
 \degree{Master of Science, Psychology, 2014, University of Oregon}
 \degree{Bachelor of Arts, Cognitive Science, 2004, University of California, Berkeley}
 
-\interests{Interest 1}
-\interests{Interest 2}
-\interests{Interest 3}
+\interests{Adolescent development}
+\interests{Development of individual differences}
+\interests{Quantitative methodology}
 
 \position{Graduate Research/Teaching Fellow, University of Oregon, 2012–Present}
 \position{Research Coordinator, Stanford University School of Medicine, 2009–2012}
@@ -168,14 +170,17 @@ dapibus porttitor. Morbi id nisl a est feugiat iaculis.
 \award{Clarence and Lucille Dunbar Scholarship, University of Oregon, 2014}
 \award{} % extra empty award is neccessary 
 
-% Example publications:
-\publication{Thomas, D. R. K., \& Smith, A. B. (2009). System models for the 
-             study of procrastination in high school students. 
-             \emph{American Journal of Everything}, 100, 7–20.}%
-%\publication{Smith, A. B., Thomas, D. R. K., \& Kemper, S. (2008). Models and 
-%             instruments for analysis. E. Ramping \& J. R. Douglas (Eds.), 
-%             \emph{Behavior analysis: The areas of research} (pp. 67-69). 
-%             Englewood Cliffs, NJ: Prentice-Hall.}
+\publication{Thalmayer, A.G., Saucier, G., Srivastava, S.,  \& Flournoy, J. C. (under review). Ethics-Relevant Values in Adulthood: Longitudinal Findings from the Life and Time Study.}%
+\publication{de Macks, Z. A. O., Flannery, J. E., Peake, S. J., Flournoy, J. C., Mobasser, A., Alberti, S. L., ... \& Pfeifer, J. H. (2018). Novel insights from the Yellow Light Game: Safe and risky decisions differentially impact adolescent outcome-related brain function. \textit{NeuroImage}. \href{https://doi.org/10.1016/j.neuroimage.2018.06.058}{10.1016/j.neuroimage.2018.06.058}}%
+\publication{Flannery, J. E., Giuliani, N., Flournoy, J. C., \& Pfeifer, J. H. (2017). Neurodevelopmental Changes Across Adolescence in Viewing and Labeling Dynamic Peer Emotions. \textit{Developmental Cognitive Neuroscience, 25}, 113-127. \href{http://dx.doi.org/10.1016/j.dcn.2017.02.003}{10.1016/j.dcn.2017.02.003}}%
+\publication{Giuliani, N. R., Flournoy, J. C., Ivie, E. J., Von Hippel, A., \& Pfeifer, J. H. (2017). Presentation and Validation of the DuckEES Child and Adolescent Dynamic Facial Expressions Stimulus Set. \textit{International Journal of Methods in Psychiatric Research, 26(1)}, e1553. \href{https://doi.org/10.1002/mpr.1553}{10.1002/mpr.1553}}%
+\publication{King, K. M., Littlefield, A., McCabe, C., Mills, K. L., Flournoy, J. C., \& Chassin, L. (2017). Longitudinal modeling in developmental neuroimaging research: Common challenges, and solutions from developmental psychology. \textit{Developmental Cognitive Neuroscience}. \href{https://doi.org/10.1016/j.dcn.2017.11.009}{10.1016/j.dcn.2017.11.009}}%
+\publication{Leonard, J. A., Flournoy, J. C., Lewis-de los Angeles, C. P. \& Whitaker, K. J. (2017). How much motion is too much motion? Determining motion thresholds by sample size for reproducibility in developmental resting-state MRI. \textit{Research Ideas and Outcomes, 3,} e12569. \href{https://doi.org/10.3897/rio.3.e12569}{10.3897/rio.3.e12569}}%
+\publication{Madhyastha, T., Peverill, M., Koh, N., McCabe, C., Flournoy, J. C., Mills, K. L., King, K. M., Pfeifer, J. H., \& McLaughlin, K. A. (2017). Current methods and limitations for longitudinal fMRI analysis across development. \textit{Developmental Cognitive Neuroscience}. \href{https://doi.org/10.1016/j.dcn.2017.11.006}{10.1016/j.dcn.2017.11.006}}%
+\publication{Matta, T., Flournoy, J. C., \& Byrne, M. (2017). Making an unknown unknown a known unknown: Missing data in longitudinal neuroimaging studies. \textit{Developmental Cognitive Neuroscience}. \href{https://doi.org/10.1016/j.dcn.2017.10.001}{10.1016/j.dcn.2017.10.001}}%
+\publication{Flournoy, J. C., Pfeifer, J. H., Moore, W. E., Tackman, A. M., Masten, C. L., Mazziotta, J. C., ... Dapretto, M. (2016). Neural Reactivity to Emotional Faces May Mediate the Relationship Between Childhood Empathy and Adolescent Prosocial Behavior. \textit{Child Development, 87(6),} 1691–1702. \href{https://doi.org/10.1111/cdev.12630}{10.1111/cdev.12630}}%
+\publication{Goodkind, M. S., Gallagher-Thompson, D., Thompson, L. W., Kesler, S. R., Anker, L., Flournoy, J., ... O’Hara, R. M. (2015). The impact of executive function on response to cognitive behavioral therapy in late-life depression. \textit{International Journal of Geriatric Psychiatry, 31(4),} 334-339. \href{http://doi.org/10.1002/gps.4325}{10.1002/gps.4325}}%
+\publication{O’Hara, R., Marcus, P., Thompson, W. K., Flournoy, J., Vahia, I., Lin, X., ... Jeste, D. V. (2012). 5-HTTLPR Short Allele, Resilience, and Successful Aging in Older Adults. \textit{American Journal of Geriatric Psych, 20(5),} 452-456. \href{http://doi.org/10.1097/JGP.0b013e31823e2d03}{10.1097/JGP.0b013e31823e2d03}}%
 \publication{} % extra empty publication is neccessary 
 
 \acknowledge{
